--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "emailjs-com": "^3.2.0",
+    "firebase": "^11.0.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18"
